--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hello-friend-ng"]
 	path = themes/hello-friend-ng
 	url = https://github.com/bsidio/hugo-theme-hello-friend-ng.git
+[submodule "themes/hf"]
+	path = themes/hf
+	url = git@github.com:bsidio/hugo-theme-hello-friend-ng.git
